--- a/.github/workflows/build-kernel-release.yml
+++ b/.github/workflows/build-kernel-release.yml
@@ -44,6 +44,16 @@ jobs:
       manifest: "oneplus12_v.xml"
       android_version: "android14"
       kernel_version: "6.1"
+  build-kernel-opace3pro:
+    uses: ./.github/workflows/build.yml
+    secrets: inherit
+    with:
+      model: "OPAce3Pro"
+      soc: "pineapple"
+      branch: "oneplus/sm8650"
+      manifest: "oneplus_ace3_pro.xml"
+      android_version: "android14"
+      kernel_version: "6.1"
   build-kernel-op13r:
     uses: ./.github/workflows/build.yml
     secrets: inherit
@@ -62,6 +72,16 @@ jobs:
       soc: "pineapple"
       branch: "oneplus/sm7675"
       manifest: "oneplus_nord_4_v.xml"
+      android_version: "android14"
+      kernel_version: "6.1"
+  build-kernel-opace3v:
+    uses: ./.github/workflows/build.yml
+    secrets: inherit
+    with:
+      model: "OPAce3V"
+      soc: "pineapple"
+      branch: "oneplus/sm7675"
+      manifest: "oneplus_ace_3v_v.xml"
       android_version: "android14"
       kernel_version: "6.1"
   build-kernel-opopen:
